--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,12 +71,19 @@ docker_build:
 deploy_dev:
   stage: deploy
   image: $OC_IMAGE_NAME_AND_TAG
+  before_script:
+    - cat version.txt
+    - export CI_COMMIT_SHORT_SHA=$(cat version.txt)
+    - echo "CI_COMMIT_SHORT_SHA=${CI_COMMIT_SHORT_SHA}"
+    - echo "$CI_COMMIT_SHORT_SHA"
   script:
     - echo "Deploying to Dev environment..."
-    - |
-      oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
-      oc project $OPENSHIFT_PROJECT_DEV
-      oc apply -f k8s/deployment.yml
+    - sed -i "s/$CI_REGISTRY_IMAGE:\$CI_COMMIT_SHORT_SHA/$CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA" k8s/deployment.yml
+    - cat k8s/deployment.yml
+    # - |
+    #   oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
+    #   oc project $OPENSHIFT_PROJECT_DEV
+    #   oc apply -f k8s/deployment.yml
   only:
     - /^feature-.*$/
   tags:
