--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 stages:
-  - build
+  # - build
 #  - test
   - docker_build
   - deploy
@@ -16,20 +16,20 @@ variables:
   OPENSHIFT_PROJECT_STAGING: "quarkus-demo-staging-project"
   OPENSHIFT_PROJECT_PROD: "quarkus-demo-prod-project"
 
-build:
-  stage: build
-  image: maven:3.8.4-openjdk-11-slim
-  script:
-   - export VERSION=$(mvn --non-recursive help:evaluate -Dexpression=project.version -q -DforceStdout)
-   - echo $VERSION > version.txt
-   - mvn clean package -DskipTests -Dquarkus.container-image.build=false
-   - chmod -R +x target/quarkus-app/quarkus-run.jar
-  artifacts:
-    paths:
-      - version.txt
-      - target/quarkus-app/quarkus-run.jar
-  tags:
-    - master
+# build:
+#   stage: build
+#   image: maven:3.8.4-openjdk-11-slim
+#   script:
+#    - export VERSION=$(mvn --non-recursive help:evaluate -Dexpression=project.version -q -DforceStdout)
+#    - echo $VERSION > version.txt
+#    - mvn clean package -DskipTests -Dquarkus.container-image.build=false
+#    - chmod -R +x target/quarkus-app/quarkus-run.jar
+#   artifacts:
+#     paths:
+#       - version.txt
+#       - target/quarkus-app/quarkus-run.jar
+#   tags:
+#     - master
 
 # test:
 #   stage: test
@@ -78,7 +78,7 @@ deploy_dev:
     - echo "$CI_COMMIT_SHORT_SHA"
   script:
     - echo "Deploying to Dev environment..."
-    - sed -i "s/$CI_REGISTRY_IMAGE:\$CI_COMMIT_SHORT_SHA/$CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA" k8s/deployment.yml
+    - sed -i "s/VERSION:$CI_COMMIT_SHORT_SHA" k8s/deployment.yml
     - cat k8s/deployment.yml
     # - |
     #   oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
