--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-quarkus-app
-  namespace: quarkus-demo-project
+  namespace: NAMESPACE
 spec:
   replicas: 1
   selector:
