--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,6 +81,7 @@ deploy_dev:
   script:
     - echo "Deploying to Dev environment..."
     - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" k8s/deployment.yml
+    - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_DEV/g" k8s/deployment.yml
     - cat k8s/deployment.yml
     - |
       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
@@ -93,31 +94,43 @@ deploy_dev:
   environment:
     name: dev
 
-timed rollout 10%:
-  stage: incremental rollout 10%
-  variables:
-    ROLLOUT_PERCENTAGE: 10
-  # ...
-
-timed rollout 100%:
-  stage: incremental rollout 100%
-  variables:
-    ROLLOUT_PERCENTAGE: 100
+.rollout_template: &rollout_template
+  stage: incremental rollout
+  image: $OC_IMAGE_NAME_AND_TAG
+  before_script:
+    - cat version.txt
+    - export CI_COMMIT_SHORT_SHA=$(cat version.txt)
+    - echo "CI_COMMIT_SHORT_SHA=${CI_COMMIT_SHORT_SHA}"
+    - echo "$CI_COMMIT_SHORT_SHA"
+  script:
+    - echo "Performing incremental rollout..."
+    - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" k8s/deployment.yml
+    - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_DEV/g" k8s/deployment.yml
+    - cat k8s/deployment.yml
+    - |
+      oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
+      oc project $OPENSHIFT_PROJECT_DEV
+      oc apply -f k8s/deployment.yml
+      # Perform incremental rollout logic here
+  only:
+    - /^feature-.*$/
+  tags:
+    - master
 
 .deploy_manual:
-  <<: *manual_rollout_template
-  stage: dev
+  <<: *rollout_template
+  stage: deploy
   when: manual
-  only:
-    refs:
-      - /^feature-.*$/
-    kubernetes: active
-    variables:
-      - $INCREMENTAL_ROLLOUT_MODE == "manual"
-      - $INCREMENTAL_ROLLOUT_ENABLED
-  except:
-    variables:
-      - $INCREMENTAL_ROLLOUT_MODE == "timed"
+
+timed rollout 10%:
+  <<: *rollout_template
+  variables:
+    ROLLOUT_PERCENTAGE: 10
+
+timed rollout 100%:
+  <<: *rollout_template
+  variables:
+    ROLLOUT_PERCENTAGE: 100
 
 deploy_qa:
   stage: deploy
@@ -130,6 +143,7 @@ deploy_qa:
   script:
     - echo "Deploying to QA environment..."
     - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" k8s/deployment.yml
+    - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_QA/g" k8s/deployment.yml
     - cat k8s/deployment.yml
     - |
       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO_QA --insecure-skip-tls-verify=true
@@ -154,6 +168,7 @@ deploy_staging:
   script:
     - echo "Deploying to Staging environment..."
     - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" k8s/deployment.yml
+    - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_STAGING/g" k8s/deployment.yml
     - cat k8s/deployment.yml
     - |
       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO_STAGING --insecure-skip-tls-verify=true
@@ -175,6 +190,7 @@ deploy_prod:
   script:
     - echo "Deploying to Production environment..."
     - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" k8s/deployment.yml
+    - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_PROD/g" k8s/deployment.yml
     - cat k8s/deployment.yml
     - |
       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO_PROD --insecure-skip-tls-verify=true
