--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -163,8 +163,9 @@ rollback_dev:
   only:
     - /^feature-.*$/
     - branches
-  dependencies:
-    - "timed rollout 10%"
+  rules:
+    - exists:
+        - timed rollout 10%
 
 timed rollout 100%:
   <<: *rollout_template
