--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -17,4 +17,6 @@ spec:
         - name: my-quarkus-app
           image: 172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld:VERSION
           ports:
+            - name: http
             - containerPort: 8080
+            - protocol: TCP
