--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,11 +25,11 @@ build:
    - export VERSION=$(mvn --non-recursive help:evaluate -Dexpression=project.version -q -DforceStdout)
    - echo $VERSION > version.txt
    - mvn clean package -DskipTests -Dquarkus.container-image.build=false
-   - chmod -R +x target/quarkus-app
+   - chmod -R +x target/
   artifacts:
     paths:
       - version.txt
-      - target/quarkus-app/
+      - target/
   tags:
     - master
 
