--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.example</groupId>
-  <artifactId>quarkus-helloworld</artifactId>
-  <version>5.0.0-SNAPSHOT</version>
+  <artifactId>helloworld</artifactId>
+  <version>6.0.0-SNAPSHOT</version>
   <properties>
     <docker.image.prefix>repository/docker-private/demo-project/quarkus-helloworld</docker.image.prefix>
     <maven.compiler.source>11</maven.compiler.source>
