--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,7 @@ docker_build:
     - export CI_COMMIT_SHORT_SHA=$(cat version.txt)
     - echo "CI_COMMIT_SHORT_SHA=${CI_COMMIT_SHORT_SHA}"
     - echo "$CI_COMMIT_SHORT_SHA"
+    - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" Dockerfile
     - docker build -t "$CI_REGISTRY_IMAGE:${CI_COMMIT_SHORT_SHA}" .
     - docker images | grep $CI_REGISTRY_IMAGE
     - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_SHORT_SHA}"
