--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,29 +95,30 @@ deploy_dev:
   tags:
     - master
 
-# deploy_qa:
-#   stage: deploy
-#   image: $OC_IMAGE_NAME_AND_TAG
-#   before_script:
-#     - cat version.txt
-#     - export CI_COMMIT_SHORT_SHA=$(cat version.txt)
-#     - echo "CI_COMMIT_SHORT_SHA=${CI_COMMIT_SHORT_SHA}"
-#     - echo "$CI_COMMIT_SHORT_SHA"
-#   script:
-#     - echo "Deploying to QA environment..."
-#     - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" k8s/deployment.yml
-#     - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_QA/g" k8s/deployment.yml
-#     - cat k8s/deployment.yml
-#     - |
-#       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO_QA --insecure-skip-tls-verify=true
-#       oc project $OPENSHIFT_PROJECT_QA
-#       oc apply -f k8s/deployment.yml
-#   only:
-#     - /^feature-.*$/
-#   when: manual
-#   allow_failure: true
-#   tags:
-#     - master
+deploy_qa:
+  stage: deploy
+  image: $OC_IMAGE_NAME_AND_TAG
+  before_script:
+    - cat version.txt
+    - export CI_COMMIT_SHORT_SHA=$(cat version.txt)
+    - echo "CI_COMMIT_SHORT_SHA=${CI_COMMIT_SHORT_SHA}"
+    - echo "$CI_COMMIT_SHORT_SHA"
+  script:
+    - echo "Deploying to QA environment..."
+    - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" k8s/deployment.yml
+    - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_QA/g" k8s/deployment.yml
+    - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_QA/g" k8s/service.yml
+    - cat k8s/deployment.yml
+    - |
+      oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO_QA --insecure-skip-tls-verify=true
+      oc project $OPENSHIFT_PROJECT_QA
+      oc apply -f k8s/deployment.yml
+  only:
+    - /^feature-.*$/
+  when: manual
+  allow_failure: true
+  tags:
+    - master
 
 
 # deploy_staging:
