--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,27 +121,29 @@ deploy_qa:
     - master
 
 
-# deploy_staging:
-#   stage: deploy
-#   image: $OC_IMAGE_NAME_AND_TAG
-#   before_script:
-#     - cat version.txt
-#     - export CI_COMMIT_SHORT_SHA=$(cat version.txt)
-#     - echo "CI_COMMIT_SHORT_SHA=${CI_COMMIT_SHORT_SHA}"
-#     - echo "$CI_COMMIT_SHORT_SHA"
-#   script:
-#     - echo "Deploying to Staging environment..."
-#     - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" k8s/deployment.yml
-#     - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_STAGING/g" k8s/deployment.yml
-#     - cat k8s/deployment.yml
-#     - |
-#       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO_STAGING --insecure-skip-tls-verify=true
-#       oc project $OPENSHIFT_PROJECT_STAGING
-#       oc apply -f k8s/deployment.yml
-#   only:
-#     - /^release-.*$/
-#   tags:
-#     - master
+ deploy_staging:
+   stage: deploy
+   image: $OC_IMAGE_NAME_AND_TAG
+   before_script:
+     - cat version.txt
+     - export CI_COMMIT_SHORT_SHA=$(cat version.txt)
+     - echo "CI_COMMIT_SHORT_SHA=${CI_COMMIT_SHORT_SHA}"
+     - echo "$CI_COMMIT_SHORT_SHA"
+   script:
+     - echo "Deploying to Staging environment..."
+     - sed -i "s/VERSION/$CI_COMMIT_SHORT_SHA/g" k8s/deployment.yml
+     - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_STAGING/g" k8s/deployment.yml
+     - sed -i "s/NAMESPACE/$OPENSHIFT_PROJECT_STAGING/g" k8s/service.yml
+     - cat k8s/deployment.yml
+     - |
+       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO_STAGING --insecure-skip-tls-verify=true
+       oc project $OPENSHIFT_PROJECT_STAGING
+       oc apply -f k8s/deployment.yml
+       oc apply -f k8s/service.yml
+   only:
+     - /^release-.*$/
+   tags:
+     - master
 
 # deploy_prod:
 #   stage: deploy
